css/admin-menu-manager.css
#adminmenu #admin-menu-manager-edit {
	margin-top: 20px;
	cursor: pointer !important;
}

#adminmenu:not(.ui-sortable-disabled) #admin-menu-manager-edit .menu-top,
#admin-menu-manager-edit .menu-top {
	background: transparent !important;
	font-size: 13px !important;
	cursor: pointer !important;
}

#adminmenu:not(.ui-sortable-disabled) .ui-sortable-handle a {
	cursor: move !important;
}

#adminmenu:not(.ui-sortable-disabled) .wp-menu-separator.ui-sortable-handle {
	height: 26px;
	border: 2px dashed;
	margin: 0;
	cursor: move !important;
}

#adminmenu .wp-menu-separator.ui-sortable-handle {
	transition: height .5s ease-in-out, border .5s ease-in-out, margin .5s ease-in-out;
}

#adminmenu:not(.ui-sortable-disabled) .wp-has-submenu.ui-sortable-handle .wp-submenu {
	/*top: -1px !important;*/
}

